--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 	color: orange;
 	font-size: 26px;
 	color: #fff;
+	margin-top: 100px;
 }
 
 .table{
@@ -56,4 +57,26 @@ td{
 .color2{
 	background-color: #454545;
 	box-shadow: 0px 8px 3px #000;
+	font-size: 15px;
+	font-weight: bold;
+}
+.color3{
+	background-color: #454545;
+	box-shadow: 0px 8px 3px #000;
+	font-size: 15px;
+	font-weight: bold;
+	color: #5fdef5;
+	text-align: center;
+}
+.button{
+	background: #454545;
+	border-top: none;
+	border-right: none;
+	border-left: none;
+	border-radius: 5px;
+	padding: 10px 20px;
+	font-size: 13pt;
+	border-bottom:0px solid #454545;
+	margin-top: 50px;
+
 }
